css/styles.css
* { 
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    -moz-tap-highlight-color: rgba(0, 0, 0, 0);
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

html {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
}

body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    background-color: black;
}
 
canvas {
    display: block;
    margin-left: auto;
    margin-right: auto;
    left: 0px;
    right: 0px;
}

img {
    -webkit-user-drag: none;
    -khtml-user-drag: none;
    -moz-user-drag: none;
    -o-user-drag: none;
    width: 100%;
}

img.viewable {    
    border-radius: 10px;
}

.unselectable {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.node {
    position: fixed;
    overflow: hidden;
}

.node.selected {
    outline-style: solid;
}

.node-head {
    overflow: hidden;
    white-space: nowrap;
    width: 100%;
    font-weight: bold;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.node-title {
    width: auto;
}

.node-head-icon {
    width: 20px;
    height: 20px;
    min-width: 20px;
    vertical-align: middle;
    border-radius: 10px;
}

.node-head-icon-hover {
    background-color: rgba(255.0, 255.0, 255.0, 0.5);
}

.node-content {
    padding: 10px;
    height: 100%;
    text-align: justify;
}

.definition {
    font-style: italic;
    font-weight: bold;
    text-decoration: underline;
}

.defined {
    font-style: italic;
    font-weight: bold;
}

.stressed {
    font-weight: bold;
}

.formula {
    padding: 5px;
    text-align: center;
}

.math {
    font-family: 'ebgaramond';
}

